--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
-title: welcome to liuyangvic's Github homepage !
-description: monsters # iron man
+title: 
+description: good good study, day day up.
